media/sonarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sonarr
  namespace: media
  labels:
    app: sonarr
spec:
  ports:
    - port: 8989
      name: sonarr
  selector:
    app: sonarr
